Thu Jan 06 12:01:47 2000  Marcel Bosc  <bosc@ceic.com>

	* htword/compression: Split WordDBCompress.* to WordDBCompress +
	WordDBPage.*

	* htword/WordBitCompress: renamed put/get to put_uint/get_uint. added get/put_uint_vl

	* htword/compression: modified slightly the compression: this makes old databases
	OBSOLETE: headers compress better. Chaged Flags compress better and faster.

	* htword/WordKey: added operator [] and Get/Set accessors

	* htword: removed the obsolete --with_key configure option (KEYDESC)

	* htword/WordMonitor: addded  monitor input
	
Wed Jan 05 13:26:16 2000  Loic Dachary  <loic@ceic.com>

	* htdig/ExternalParser.cc (parse): use nocase_compare instead of mystrcasecmp to
	  suppress warnings. (char*)String for mystrncasecmp that has no equivalent in
	  the String class.

	* htdig/Retriever.cc (IsValidURL): remove warning by (char*)url

Wed Jan 05 11:54:19 2000  Loic Dachary  <loic@ceic.com>

	* htword/WordKey.h: kill obsolete comment and add suffix explanation at
	  the beginning of the file.
	
	* htword/WordKey.h (class WordKey): rename copy_from and initialize to CopyFrom
	  and Initialize to fit naming conventions. Reorganize the methods to group them
	  in logical sets. Fix indenting. Comment each method. 

	* htword/WordKey.h (Clear): add kword.trunc()

	* htword/WordKey.h: protect SetWord(const char *str,int len) because it opens
	  the door to all kind of specific derivations. Should be 
	  SetWord(String(foo, foo_length)) if not performance critical.

Wed Dec 29 18:41:14 1999   Marcel Bosc <bosc@ceic.com>

	* htlib/HtMaxMin:  added max/min  of  arrays,  added comments  to
	HtMaxMin. Added HtMaxMin.cc all these are used in htword

	* htlib/HtTime.h: added comments. included portable time.h

	* htlib/HtVectorGeneric.cc: added HtVector_double, HtVector_String

	* htlib/HtVectorGeneric.h: inlined several methods, disactivated CheckBounds

	* htlib/StringMatch.cc: removed #include"WordType.h", this made htlib dependant